--- a/_projects/si608.md
+++ b/_projects/si608.md
@@ -1,5 +1,5 @@
 ---
-title: "Political Contribution Prediction using Graph Algorithms"
+title: "Predicting Political Activity through Finance Networks"
 collection: projects
 type: "Project"
 permalink: /projects/si608
